# poster

./: .env_example  README.md  pyproject.toml
places/: admin.py  models.py  views.py
places/management/commands/: load_place.py
places/migrations/: 0001_initial.py  0002_placeimage.py
templates/: index.html
where_to_go/: settings.py  urls.py
